kube_production/kube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticationservice
  namespace: plandar-production
  labels:
    app: authenticationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authenticationservice
  template:
    metadata:
      labels:
        app: authenticationservice
    spec:
      containers:
      - image: docker.pkg.github.com/ese6-individual-project-floris-feddema/authenticationservice/authenticationservice
        imagePullPolicy: IfNotPresent
        name: authenticationservice
        ports: 
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health/live
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
        resources:
          limits:
            cpu: 400m
            memory: 800Mi
          requests:
            cpu: 200m
            memory: 400Mi
      imagePullSecrets:
      - name: github-docker-registry
