kube_production/kube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticationservice
  namespace: plandar-production
spec:
  selector:
    app: authenticationservice
  ports:
  - port: 80
    targetPort: 80
